k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: production-platform
  namespace: production-platform
  labels:
    app.kubernetes.io/name: production-kubernetes-platform
spec:
  type: ClusterIP

  selector:
    app.kubernetes.io/name: production-kubernetes-platform

  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
