k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: production-platform
  namespace: production-platform
  annotations:
    nginx.ingress.kubernetes.io/proxy-read-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "30"
spec:
  ingressClassName: nginx

  rules:
    - host: production-platform.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: production-platform
                port:
                  number: 80
