k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: production-platform
  namespace: production-platform
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: production-kubernetes-platform

  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 8080

  egress:
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53

    - ports:
        - protocol: TCP
          port: 443
        - protocol: TCP
          port: 80
